scenario code